# terraform-module-migration

./: README.md  pyproject.toml
src/terraform_module_migration/: __init__.py  cli.py  client.py  migrator.py
src/terraform_module_migration/models/: modules.py
